--- a/MVPDaggerTemplate-master/MvcDaggerTemplate/app/src/main/res/layout/activity_login.xml
+++ b/MVPDaggerTemplate-master/MvcDaggerTemplate/app/src/main/res/layout/activity_login.xml
@@ -11,12 +11,10 @@
     <com.droidit.mvvmProject.login_mvvm.ServerView
         android:id="@+id/server_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone" />
+        android:layout_height="wrap_content"/>
 
     <com.droidit.mvvmProject.login_mvvm.CredentialView
         android:id="@+id/credential_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone" />
+        android:layout_height="wrap_content"/>
 </LinearLayout>
