--- a/MVPDaggerTemplate-master/MvcDaggerTemplate/app/src/main/res/layout/activity_login.xml
+++ b/MVPDaggerTemplate-master/MvcDaggerTemplate/app/src/main/res/layout/activity_login.xml
@@ -1,20 +1,21 @@
 <!--
   ~ Copyright (c) 2015. K2 Workflow. All rights reserved
   -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusableInTouchMode="true"
-    android:orientation="vertical"
     android:padding="16dp">
 
     <com.droidit.mvvmProject.login_mvvm.ServerView
         android:id="@+id/server_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
 
     <com.droidit.mvvmProject.login_mvvm.CredentialView
         android:id="@+id/credential_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
+</RelativeLayout>
