--- a/MvvmExperiment/MvvmExperiment/app/src/main/res/layout/activity_rx_java.xml
+++ b/MvvmExperiment/MvvmExperiment/app/src/main/res/layout/activity_rx_java.xml
@@ -30,4 +30,17 @@
         android:layout_gravity="end"
         android:text="Get Stuff MVP" />
 
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical">
+
+        <TextView
+            android:id="@+id/result_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </ScrollView>
+
+
 </LinearLayout>
