8_Added all the view models and observables to the rx mvvm package. Did some refactoring. Struggled with a butterknife issue but it seems to be related to an older apt version I had

--- a/MvvmExperiment/MvvmExperiment/app/src/main/res/layout/activity_rx_mvvm.xml
+++ b/MvvmExperiment/MvvmExperiment/app/src/main/res/layout/activity_rx_mvvm.xml
@@ -1,9 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    tools:context="com.droidit.mvvmProject.rx_mvvm.RxMvvmActivity">
+    android:focusableInTouchMode="true"
+    android:orientation="vertical"
+    android:padding="16dp">
 
-</android.support.constraint.ConstraintLayout>
+    <RelativeLayout
+        android:id="@+id/rxmvvm_jokes_button"
+        android:layout_width="fill_parent"
+        android:layout_height="36dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginBottom="52dp"
+        android:layout_marginTop="0dp"
+        android:background="@color/colorAccent"
+        android:clickable="true"
+        android:padding="0dp">
+
+        <TextView
+            android:id="@+id/rxmvvm_jokes_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:fontFamily="sans-serif"
+            android:text="Get Joke"
+            android:textAllCaps="false"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <ProgressBar
+            android:id="@+id/rxmvvm_jokes_progressbar"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:paddingEnd="0dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="0dp"
+            android:paddingStart="8dp"
+            android:visibility="gone" />
+
+    </RelativeLayout>
+
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical">
+
+        <TextView
+            android:id="@+id/rxmvvm_result_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp" />
+
+    </ScrollView>
+
+</LinearLayout>
