--- a/MvvmExperiment/MvvmExperiment/app/src/main/res/values/colors.xml
+++ b/MvvmExperiment/MvvmExperiment/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="red">#FF4136</color>
+    <color name="grey">#AAAAAA</color>
+    <color name="normal">#0074D9</color>
 </resources>
